@@ -36,6 +36,10 @@ Release date: TBA
 
   Closes #3878
 
+* ``CodeStyleChecker``
+
+  * Extended ``consider-using-tuple`` check to cover ``in`` comparisons.
+
 
 What's New in Pylint 2.9.6?
 ===========================
